GNOME Bugzilla – Bug 773784
splitmuxsink: failed assertion on gst-launch-1.0 ^C
Last modified: 2016-11-16 15:31:34 UTC
83e7182b30b24e9969d6dd028ee6a152379a5741 is the first bad commit ====== Setting pipeline to NULL ... Freeing pipeline ... (gst-launch-1.0:3674): GStreamer-CRITICAL **: gst_object_get_name: assertion 'GST_IS_OBJECT (object)' failed fish: “env G_DEBUG=fatal_warnings gst-…” terminated by signal SIGTRAP (Trace or breakpoint trap) ====== Core was generated by `/home/vivia/git/gstreamer/head/gstreamer/tools/.libs/lt-gst-launch-1.0 videotes'. Program terminated with signal SIGTRAP, Trace/breakpoint trap.
+ Trace 236798
env G_DEBUG=fatal_warnings gst-launch-1.0 videotestsrc ! video/x-raw,framerate=30/1 ! timeoverlay ! x264enc ! splitmuxsink muxer=qtmux max-size-time=120000000000 location=video%05d.mov
Thanks! This fixes it for me: commit 8ff5dd802932a6f9c33f80e2750262359797a78b Author: Jan Schmidt <jan@centricular.com> Date: Wed Nov 2 11:00:13 2016 +1100 splitmuxsink: Fix GObject warnings on shutdown. Commit 83e718 added a pad template to splitmux request pads, which means that GstElement now releases the pads on dispose, but after having removed all elements in the bin and unlinked them. Make sure we can handle cleanup in that case without throwing assertions. https://bugzilla.gnome.org/show_bug.cgi?id=773784
*** Bug 774556 has been marked as a duplicate of this bug. ***